# python-tokei

./: .gitignore  MANIFEST.in  README.rst  pyproject.toml  tox.ini
.github/workflows/: integration.yml
src/tokei/: __init__.py
tests/: test_tokei.py
