[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-tokei"
description = "Python wrapper for Tokei"
authors = [
    {"name" = "Grant Jenks", "email" = "contact@grantjenks.com"},
]
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["licensing", "encoding"]
license = {"text" = "Apache 2.0"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://grantjenks.com/docs/python-tokei/"
Funding = "https://gum.co/python-tokei"
Source = "https://github.com/grantjenks/python-tokei"
Tracker = "https://github.com/grantjenks/python-tokei/issues"

[tool.setuptools.dynamic]
version = {attr = "tokei.__version__"}

[tool.setuptools.packages.find]
where = ["src"]
